# saltwatereos

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  buildPythonAPIs.ps1  buildPythonAPIs.sh  environment.yml  example.cpp  main.cpp  readme.html  readme.md  ref.bib  swEOSVersion.h.in  test.sh
.github/workflows/: debug_macos.yml  doc.backup  doc.yml  macos.yml  test.yml  test_macos.yml  test_windows.yml  ubuntu.yml  win.yml  windows.yml
ThirdParties/p4est-2.8/: ChangeLog  Makefile.in  aclocal.m4  configure  readme.md
ThirdParties/p4est-2.8/config/: p4est_autotools_config.h.in
ThirdParties/p4est-2.8/doc/: Doxyfile
ThirdParties/p4est-2.8/sc/: ChangeLog  Makefile.in  aclocal.m4  configure
ThirdParties/p4est-2.8/sc/config/: sc_config_autotools.h.in
ThirdParties/p4est-2.8/sc/doc/: Doxyfile
benchmarkTest/: CMakeLists.txt  main.cpp  plot_benchmarkTest.py
benchmarkTest/cpp/: CMakeLists.txt  main.cpp
benchmarkTest/notebook/: .gitignore  benchmarkPhaseDiagram.ipynb  derivative.ipynb
benchmarkTest/plot/: exportVTKjs_html.py  phaseDiagram.pvsm  plot_benchmarkTest.py
benchmarkTest/python/: .gitignore  Figures_Driesner2007_2.py  HaliteEnthalpy.py  readOutFile_sowt_ptx.py  water.py
commandline/: .gitignore  CMakeLists.txt  MultiProgressBar.cpp  MultiProgressBar.h  SWEOSbash.cpp  SWEOSbash.h  getopt.cpp  getopt.h  main.cpp  readme.md  swEOSVersion.h
desktop/: .gitignore  CMakeLists.txt  Info.plist  MainWindow.cxx  MainWindow.h  MainWindow.h.autosave  MainWindow.ui  MainWindow.ui.autosave  Meter.cpp  Meter.h  MultiProgressBar.cpp  MultiProgressBar.h  SWEOSbash.cpp  SWEOSbash.h  SimpleView.cxx  SimpleView.ui  main.cxx  meter.cpp  package.bat  package.sh  qroundprogressbar.cpp  readme.html  readme.md  swEOSConfig.h  swEOSConfig.h.in  swEOSVersion.h  touchbar.h  touchbar.mm
desktop/ColorSchemes/: ColorSchemes.py
desktop/Icons/: .gitignore  icons.qrc  logo.icns  logo2.icns  makeicons.sh  swEOS.ai
desktop/example/: example_Paraview.py
desktop/languages/: zh_CN copy.ts  zh_CN.qm  zh_CN.ts
doxygen/: Doxyfile  DoxygenLayout.xml  customdoxygen.css  footer.html  header.html  mainpage.markdown  ref.bib
doxygen/vtk_js/: phaseDiagram_NaClH2O.vtkjs
include/: H2ONaCl.H
ios/saltwaterEOS/: TableViewController.swift
ios/saltwaterEOS/SaltWaterEOS/: AppDelegate.swift  FirstViewController.swift  H2ONaCl.cpp  H2ONaCl.h  Info.plist  SaltWaterEOS-Bridging-Header.h  SceneDelegate.swift  SecondViewController.swift  cpp_wrapper.mm  cpptest.cpp  cpptest.hpp  decl.c  decl.h  iaps.h  steam.c  steam4s.h  swEOS_wrapper.h  swEOS_wrapper.mm
ios/saltwaterEOS/SaltWaterEOS.xcodeproj/: project.pbxproj
ios/saltwaterEOS/SaltWaterEOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/saltwaterEOS/SaltWaterEOS/Base.lproj/: Main.storyboard
ios/saltwaterEOS/SaltWaterEOS/SaltWaterEOS.xcdatamodeld/: .xccurrentversion
ios/saltwaterEOS/callCpp/: AppDelegate.h  AppDelegate.m  DataViewController.h  DataViewController.m  ModelController.h  ModelController.m  RootViewController.h  RootViewController.m  ddd.c  ddd.h  main.m  testcpp.cpp  testcpp.hpp
ios/saltwaterEOS/callCpp.xcodeproj/: project.pbxproj
ios/saltwaterEOS/callCpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/saltwaterEOS/callCpp/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
ios/saltwaterEOS/cppexample/: AppDelegate.swift  ViewController.swift  cpp_wrapper.h  cppexample-Bridging-Header.h  ctest.h  meta.c  more.c  more.h
ios/saltwaterEOS/cppexample.xcodeproj/: project.pbxproj
ios/saltwaterEOS/cppexample/Base.lproj/: Main.storyboard
ios/testcpp/cppexample/: H2ONaCl.h  cpptest.cpp  ctest.c  steam4.h
ios/testcpp/cppexample.xcodeproj/: project.pbxproj
ios/testcpp/cppexample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/testcpp/cppexample/Base.lproj/: Main.storyboard
manual/: .gitignore
manual/home/: config.toml
manual/home/content/C++/: _index.en.md  _index.zh.md
manual/home/i18n/: en.yaml  zh.yaml
manual/latex/: clean.sh  manual.bib  manual.tex
manual/latex/source/: cookbooks.tex  cover.tex  include.tex  installation.tex  introduction.tex  models_equations.tex  running.tex  table_symbols.tex
manual/sphinx/: .gitattributes  .gitignore  Makefile  index.html  makefigure.sh
manual/sphinx/parafoam_js/: .gitignore  expscene.py  package-lock.json  package.json  readme.md  webpack.config.js
manual/sphinx/source/: __latexindent_temp.tex  bibtex.json  conf.py  example.node  include.rst_  index.rst
manual/sphinx/tools/: echarts_html2rst.py
materials/EOS_Spivey/: Cal_Spiv.m  DriesnerTable.xlsx  GenerateTableProp.m  PROP_Dr.mat  PROP_FV.mat  PROP_SP.mat  Table.mat
materials/EOS_Spivey/water_density/: Spivey_test.m  coefficients_brine.m  density_brine.m  density_brine_refP.m  density_pure_water.m  isothermal_compressibility.m
materials/EOS_Spivey/water_viscosity/: test_visco.m  visco_brine_kestin.m  visco_brine_spivey.m  viscosity_brine.m
materials/EOS_Yury2020/: 10_Appendix1_ProBrine.xlsm  ~$10_Appendix1_ProBrine.xlsm
plot/: Figure2_Driesner2007.py  LUT.ipynb
src/: CMakeLists.txt  H2ONaCl.C  H2ONaCl.cpp  H2ONaCl.h  IAPWS-97.H  IAPWS-IF97.H
test/c++/: CMakeLists.txt  LookUpTable.pvsm  ReadMe.md  main.cpp  test_H2ONaCl_LUT.cpp  test_LookUpTableForest.cpp  test_omp.cpp
test/p4est/: CMakeLists.txt  QuadTree.cpp  QuadTree.h  quadTree.pvsm  step1.cpp  step2.cpp  step3.cpp  step4.cpp  step5.cpp  step6.cpp  step6.pvsm  step7.cpp
test/python/: Solubility_Anhydrite.ipynb  Test.ipynb
test/python/.ipynb_checkpoints/: Test-checkpoint.ipynb
wrapper/julia/: Rectangle.cpp  readme_zh.md  run.sh  test.jl
wrapper/matlab/: H2O.H  NaCl.H  Validation.H  readme.md
wrapper/python/: .gitignore  H2O.pxd  H2O.pyx  Rectangle.h  Rectangle.pxd  rect.pyx  run.sh  setup.py  test.py
wrapper/swig/: CMakeLists.txt  CMakeLists.txt_backup  Fluid.py  H2O.i  H2O.py  H2O_wrap.cxx  binding.gyp  example.R  example.c  example.cpp  example.h  example.i  example.py  example_wrap.c  example_wrap.cxx  readme.md  run.sh  test.py
(+143 files in other folders)
